# genmedia

./: .gitignore  LICENSE  PROJECT-BRIEF.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-23-genmedia-cli.md
docs/superpowers/specs/: 2026-03-23-genmedia-cli-design.md
scripts/: release.sh
src/genmedia/: models.py  output.py  retry.py  validation.py
src/genmedia/backends/: base.py  gemini.py  imagen.py  veo.py
src/genmedia/cli/: edit.py  image.py  main.py  video.py
tests/integration/: conftest.py  test_edit.py  test_gemini_image.py  test_imagen.py  test_veo.py
tests/unit/: test_backends.py  test_cli.py  test_models.py  test_output.py  test_pretty.py  test_retry.py  test_validation.py
